--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>hola, como estas ??</h2>
 
@@ -16,7 +18,13 @@
 
 
     <div>
-        
+        <nav>
+            <li>enlaze 2</li>
+            <li>enlaze 3</li>
+            <li>enlaze 4</li>
+            <li>enlaze 5</li>
+        </nav>
     </div>
 </body>
+
 </html>
