--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li>enlaze 3</li>
             <li>enlaze 4</li>
             <li>enlaze 5</li>
+            <li>rap</li>
+            <li>trap</li>
         </nav>
     </div>
 </body>
