validar back-end

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div>
         <ul>
-            <li>rack</li>
+            <li>rack prueba de confictos !!! serios hhda bckjbkjb</li>
         </ul>
     </div>
 
