--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h2>hola, como estas ??</h2>
+    <h2>hola, como estas ??   // ese verga es mi idolo !!!</h2>
 
     <div>
         <ul>
