--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <ul>
             <li>rack prueba de confictos !!! serios hhda bckjbkjb</li>
+            <li>realizando un pull request a mi repositorio de la escuela</li>
         </ul>
     </div>
 
