realizando un pull request_...!

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>rap</li>
             <li>trap</li>
             <li>actualiza cambios</li>
+            <li>usando un pull request desde mi repositorio local down up</li>
         </nav>
     </div>
 </body>
